Fix uneven audit button spacing by removing redundant margin-left

--- a/couchpotato/static/style/settings.scss
+++ b/couchpotato/static/style/settings.scss
@@ -1633,7 +1633,6 @@
 		&.audit_full_btn {
 			background: #1976d2;
 			color: #fff;
-			margin-left: 8px;
 
 			&:hover { opacity: .85; }
 		}
@@ -1646,7 +1645,6 @@
 		&.audit_delete_btn {
 			background: #c62828;
 			color: #fff;
-			margin-left: 8px;
 
 			&:hover { opacity: .85; }
 		}
@@ -1654,7 +1652,6 @@
 		&.audit_ignore_btn {
 			background: #757575;
 			color: #fff;
-			margin-left: 8px;
 
 			&:hover { opacity: .85; }
 
